# Predicting_Price_Cars

./: Presentation.ipynb  README.md  VehicleScraper.py  auto.rmd  maching.ipynb  main.py  pyproject.toml  scraper_methods.py  vehicules.csv  vehicules.json
R/: auto.rmd
machingauto/: X_test.joblib  X_train.joblib  data.py  evaluation.py  modele_entraine_gradient_boosting_pipeline.joblib  modele_entraine_knn.joblib  modele_entraine_lasso_pipeline.joblib  modele_entraine_mlp.joblib  modele_entraine_regression_lineaire.joblib  modele_svm_regression.joblib  resultats_modeles.csv  training.py  y_test.joblib
