 
[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Youssef DIR et Nazifo AFOLABI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.3"
seaborn = "^0.13.1"
scikit-learn = "1.3.1"
dump = "^0.0.5"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
